--- a/sylesheets/components/_tile-grid.scss
+++ b/sylesheets/components/_tile-grid.scss
@@ -2,6 +2,6 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 30% 30% 40%;
-  grid-template-rows: 80% 20%;
+  grid-template-columns: 38% 38% 24%;
+  grid-template-rows: 34% 33% 33%;
 }
