--- a/sylesheets/components/_tile.scss
+++ b/sylesheets/components/_tile.scss
@@ -5,13 +5,14 @@ $tile-font: Helvetica, sans-serif;
   width: 100%;
   height: 100%;
   font: 100% $tile-font;
+  position: relative;
 }
 
 .pictures-tile {
   grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 1;
-  grid-row-end: 2;
+  grid-row-end: 3;
 }
 
 .musics-tile {
@@ -25,17 +26,56 @@ $tile-font: Helvetica, sans-serif;
 .documents-tile {
   grid-column-start: 1;
   grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
   background-color: #4286f4;
 }
 
 .params-tile {
   grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  background-color: lightgray;
+}
+
+.wip-tile {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  background-color: lightgray;
+}
+
+.wip2-tile {
+  grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 3;
   background-color: lightgray;
+}
+
+.tile-description {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 15%;
+  transition: .5s ease;
+  opacity: 0;
+  color: white;
+  font-size: 14px;
+  text-align: center;
+}
+
+.tile:hover .tile-description {
+  opacity: 1;
+ }
+
+.tile:hover img {
+  filter: blur(4px);
+  transition: 0.3s linear;
 }
 
 img {
@@ -43,4 +83,14 @@ img {
   margin: auto;
   width: 100%;
   height: 100%;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
